src/objects/MUSW__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart_Cashier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart Cashier</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Deposits (Cart Cashier)</relationshipLabel>
        <relationshipName>CashierDeposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Today_s__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date_Today&apos;s</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_AP__c</fullName>
        <formula>&quot;Deposit_AP&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit AP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Cash__c</fullName>
        <formula>&quot;Deposit_Cash&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Cash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_type__c</fullName>
        <label>Document type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Application</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Comity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fine_Number__c</fullName>
        <label>Fine Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_number__c</fullName>
        <label>Form number</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wadol_Program_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Form Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>AR-636-002</fullName>
                </value>
                <value>
                    <fullName>AR-636-003</fullName>
                </value>
                <value>
                    <fullName>AR-636-004</fullName>
                </value>
                <value>
                    <fullName>AR-636-021</fullName>
                </value>
                <value>
                    <fullName>CEM-650-004</fullName>
                </value>
                <value>
                    <fullName>CEM-650-005</fullName>
                </value>
                <value>
                    <fullName>CEM-650-007</fullName>
                </value>
                <value>
                    <fullName>CEM-650-008</fullName>
                </value>
                <value>
                    <fullName>CEM-650-009</fullName>
                </value>
                <value>
                    <fullName>CEM-650-010</fullName>
                </value>
                <value>
                    <fullName>CEM-650-011</fullName>
                </value>
                <value>
                    <fullName>CEM-650-013</fullName>
                </value>
                <value>
                    <fullName>CEM-650-016</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-014</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-015</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-016</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-017</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-018</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-019</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-020</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-021</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-022</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-023</fullName>
                </value>
                <value>
                    <fullName>ENLS-651-031</fullName>
                </value>
                <value>
                    <fullName>FDE-653-002</fullName>
                </value>
                <value>
                    <fullName>FDE-653-004</fullName>
                </value>
                <value>
                    <fullName>FDE-653-006</fullName>
                </value>
                <value>
                    <fullName>FDE-653-018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Application</label>
        <referenceTo>LnP_Licence_Application__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_typeOld__c</fullName>
        <label>License typeOld</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notary Public</fullName>
                </value>
                <value>
                    <fullName>Geologist</fullName>
                </value>
                <value>
                    <fullName>Geologist in Training</fullName>
                </value>
                <value>
                    <fullName>Camping Resort Salesperson</fullName>
                </value>
                <value>
                    <fullName>Registered Appraiser Trainee</fullName>
                </value>
                <value>
                    <fullName>Appraiser Trainee</fullName>
                </value>
                <value>
                    <fullName>Timeshare Salesperson</fullName>
                </value>
                <value>
                    <fullName>Timeshare Company</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Camping Resort Company</fullName>
                </value>
                <value>
                    <fullName>Appraiser Course</fullName>
                </value>
                <value>
                    <fullName>Certified General Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certificate of Removal Registration</fullName>
                </value>
                <value>
                    <fullName>Academic Intern</fullName>
                </value>
                <value>
                    <fullName>Temporary Certified General</fullName>
                </value>
                <value>
                    <fullName>Engineer in Training</fullName>
                </value>
                <value>
                    <fullName>Professional Engineer</fullName>
                </value>
                <value>
                    <fullName>State Licensed Appraiser</fullName>
                </value>
                <value>
                    <fullName>Appraisal Management Company</fullName>
                </value>
                <value>
                    <fullName>Appraisal Controlling Person</fullName>
                </value>
                <value>
                    <fullName>On-site Wastewater Designer</fullName>
                </value>
                <value>
                    <fullName>On-site Wastewater Inspector</fullName>
                </value>
                <value>
                    <fullName>Certified Residential Appraiser</fullName>
                </value>
                <value>
                    <fullName>Landscape Architect</fullName>
                </value>
                <value>
                    <fullName>Funeral Director Intern</fullName>
                </value>
                <value>
                    <fullName>Funeral Establishment</fullName>
                </value>
                <value>
                    <fullName>Embalmer Intern</fullName>
                </value>
                <value>
                    <fullName>Crematory</fullName>
                </value>
                <value>
                    <fullName>Cremated Remains Disposition Permit</fullName>
                </value>
                <value>
                    <fullName>Prearrangement Funeral Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_type__c</fullName>
        <label>License type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wadol_Program_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account that is associated with the deposit.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount__c</fullName>
        <description>The total Amount that needs to be collected.</description>
        <label>Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Auto_Draw_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Fee that shares the same parent record as the deposit will be paid automatically when the fee is created.</description>
        <label>Auto Draw Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Available_Amount__c</fullName>
        <description>Total remaining amount available on the deposit.</description>
        <formula>MUSW__Paid_Amount__c - MUSW__Used_Amount__c - MUSW__Refunded_Amount__c - MUSW__Transfered_Out_Amount__c + MUSW__Transfered_In_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Paid_Amount__c</fullName>
        <description>Total amount that has been collected for this deposit.</description>
        <label>Paid Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Refunded_Amount__c</fullName>
        <description>Total amount that has been refunded from this deposit.</description>
        <label>Refunded Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Transfered_In_Amount__c</fullName>
        <description>Total amount that has been transferred in to this deposit.</description>
        <label>Transfered In Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Transfered_Out_Amount__c</fullName>
        <description>Total amount that has been transferred out from this deposit.</description>
        <label>Transfered Out Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Unpaid_Amount__c</fullName>
        <description>Total outstanding amount that still needs to be collected.</description>
        <formula>IF((MUSW__Amount__c - MUSW__Paid_Amount__c - MUSW__Transfered_In_Amount__c) &lt; 0, 0, MUSW__Amount__c - MUSW__Paid_Amount__c - MUSW__Transfered_In_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Used_Amount__c</fullName>
        <description>Total amount of the deposit that has been used to pay fees.</description>
        <label>Used Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Professional_code__c</fullName>
        <label>Professional code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_number__c</fullName>
        <label>Sequence number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pending</fullName>
                    <default>true</default>
                    <label>pending</label>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Validation number</label>
        <referenceTo>Customer_Envelope__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wadol_Professional_Code__c</fullName>
        <formula>CASE(TEXT(  License_typeOld__c  ),
&quot;Architect&quot;,&quot;20810&quot;,
&quot;Camping Resort Company&quot;,&quot;27706&quot;,
&quot;Camping Resort Salesperson&quot;,&quot;27708&quot;,
&quot;Cemetery&quot;,&quot;21701&quot;,
&quot;Professional Engineer&quot;,&quot;23201&quot;,
&quot;Professional Land Surveyor&quot;,&quot;23203&quot;,
&quot;Embalmer Intern&quot;,&quot;24002&quot;,
&quot;Funeral Director&quot;,&quot;24003&quot;,
&quot;Funeral Director Intern&quot;,&quot;24004&quot;,
&quot;Funeral Establishment&quot;,&quot;24005&quot;,
&quot;Prearrangement Funeral Services&quot;,&quot;24006&quot;,
&quot;Funeral Establishment Branch&quot;,&quot;24008&quot;,
&quot;Geologist&quot;,&quot;29940&quot;,
&quot;Landscape Architect&quot;,&quot;24901&quot;,
&quot;Notary Public&quot;,&quot;25601&quot;,
&quot;On-site Wastewater Designer&quot;,&quot;23251&quot;,
&quot;On-site Wastewater Inspector&quot;,&quot;23252&quot;,
&quot;Certified General Appraiser&quot;,&quot;27011&quot;,  
&quot;State Licensed Appraiser&quot;,&quot;27016&quot;,
&quot;Certified Residential Appraiser&quot;,&quot;27017&quot;,
&quot;Appraisal Management Company&quot;,&quot;27030&quot;,
&quot;Timeshare Company&quot;,&quot;21804&quot;,
&quot;Timeshare Salesperson&quot;,&quot;21805&quot;,
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wadol_Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Deposit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Amount__c</columns>
        <columns>MUSW__Available_Amount__c</columns>
        <columns>MUSW__Account__c</columns>
        <columns>License__c</columns>
        <columns>wadol_Professional_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Appraisal_Management_Company_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Appraisal Management Company Queue</label>
        <queue>Appraisal_Management_Company_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Camping_Resorts_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Camping Resorts Queue</label>
        <queue>Camping_Resorts_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deposit_Records_From_Customer_Envelope</fullName>
        <columns>NAME</columns>
        <columns>Form_number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Amount__c</columns>
        <filterScope>Mine</filterScope>
        <label>Deposit Records From Customer Envelope</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Notaries_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Notaries Queue</label>
        <queue>Notaries_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RBS_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>RBS Queue</label>
        <queue>RBS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Appraiser_Courses_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Real Estate Appraiser Courses Queue</label>
        <queue>Real_Estate_Appraiser_Courses_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Appraisers_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Real Estate Appraisers Queue</label>
        <queue>Real_Estate_Appraisers_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Timeshare_Queue_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Timeshare Queue</label>
        <queue>Timeshare_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unknown_Contact_Deposit</fullName>
        <filterScope>Queue</filterScope>
        <label>Unknown Contacts</label>
        <queue>Unknown_Contacts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Deposit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MUSW__Cannot_refund_more_than_available_amount</fullName>
        <active>true</active>
        <description>Cannot_refund_more_than_available_amount</description>
        <errorConditionFormula>AND(ISCHANGED(   MUSW__Refunded_Amount__c ), BLANKVALUE(  MUSW__Refunded_Amount__c ,0) - BLANKVALUE(PRIORVALUE(   MUSW__Refunded_Amount__c ),0)  &gt; BLANKVALUE(  PRIORVALUE( MUSW__Available_Amount__c ),0) )</errorConditionFormula>
        <errorDisplayField>MUSW__Refunded_Amount__c</errorDisplayField>
        <errorMessage>Cannot refund more than Available Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Cannot_use_more_than_paid_amount</fullName>
        <active>true</active>
        <errorConditionFormula>MUSW__Used_Amount__c &gt; (MUSW__Paid_Amount__c + MUSW__Transfered_In_Amount__c -  MUSW__Transfered_Out_Amount__c  )</errorConditionFormula>
        <errorDisplayField>MUSW__Used_Amount__c</errorDisplayField>
        <errorMessage>Cannot use more than Paid Amount</errorMessage>
    </validationRules>
</CustomObject>